<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewId"
        android:layout_width="378dp"
        android:layout_height="160dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".weatherForecastFragment">

            <TextView
                android:id="@+id/dt_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/dt_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Temp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/dt_txt"
                app:layout_constraintTop_toBottomOf="@+id/dt_txt" />

            <TextView
                android:id="@+id/Humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/Temp"
                app:layout_constraintTop_toBottomOf="@+id/Temp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/Humidity"
                app:layout_constraintTop_toBottomOf="@+id/Humidity" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:contentDescription="@string/icon"
                app:layout_constraintBottom_toBottomOf="@+id/dt_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dt_txt"
                app:srcCompat="@drawable/demoicon" />

            <TextView
                android:id="@+id/MaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/Max"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/Temp"
                app:layout_constraintStart_toEndOf="@+id/Temp"
                app:layout_constraintTop_toTopOf="@+id/Temp" />

            <TextView
                android:id="@+id/MinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/Min"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/MaxTemp"
                app:layout_constraintStart_toEndOf="@+id/MaxTemp"
                app:layout_constraintTop_toTopOf="@+id/MaxTemp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>